# ai-gym-timetable-extractor

./: .gitignore  Constants.py  GymScheduleExtractor.py  OcrEngine.py  README.md  example_usage.py  main.py  pyproject.toml  run.sh  sanity_check.sh  upload_image_using_file_api.py
output/: IMG_7191.json  IMG_7192.json  IMG_7193.json  IMG_7194.json  IMG_7195.json  IMG_7196.json  IMG_7197.json
src/ai_gym_timetable_extractor/: aggregator.py  cli.py  constants.py  database.py  extractor.py  models.py  ocr_engine.py  parser.py  web_app.py
src/ai_gym_timetable_extractor/templates/: upload.html
src/main/python/ai_gym_timetable_extractor/: __init__.py  cli.py  extractor.py
tests/: __init__.py
tests/fixtures/: __init__.py
