[project]
name = "ai-gym-timetable-extractor"
version = "0.1.0"
description = "Extract course timetables from screenshots using AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "certifi>=2024.0.0",
]

[project.scripts]
gym-schedule-extract = "ai_gym_timetable_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/main/python/ai_gym_timetable_extractor"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy"
]
test = [
    "pytest",
    "pytest-cov"
]