[project]
name = "ai-gym-timetable-extractor"
version = "0.1.0"
description = "Extract course timetables from screenshots using AI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "certifi>=2024.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
]

[project.scripts]
gym-schedule-extract = "ai_gym_timetable_extractor.cli:main"
gym-extract = "ai_gym_timetable_extractor.cli:main"
gym-web = "ai_gym_timetable_extractor.web_app:start_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_gym_timetable_extractor"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy"
]
test = [
    "pytest",
    "pytest-cov"
]